# computer-vision-tracking

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
01-camera-geometric-calibration/: CMakeLists.txt  main.cpp  util.h
01-camera-geometric-calibration/camera_calibration/: camera_calibration.cpp  camera_calibration.h
01-camera-geometric-calibration/camera_projection/: camera_projection.cpp  camera_projection.h
01-camera-geometric-calibration/checkerboard/: checkerboard.cpp
01-camera-geometric-calibration/include/: ball.h  camera.h  camera_calibration.h  checkerboard.h  cvpch.h  line_segment.h  settings.h  util.h
01-camera-geometric-calibration/pch/: cvpch.cpp  cvpch.h
01-camera-geometric-calibration/settings/: camera_calib_data.xml
01-camera-geometric-calibration/src/: ball.cpp  camera.cpp  camera_calibration.cpp  camera_projection.cpp  checkerboard.cpp  draw.cpp
02-03-voxel-reconstruction-and-labeling/: CMakeLists.txt  main.cpp
02-03-voxel-reconstruction-and-labeling/data/: tracking2d.xml
02-03-voxel-reconstruction-and-labeling/data/4persons/: bins.xml
02-03-voxel-reconstruction-and-labeling/data/4persons/cam1/: boardcorners.xml  color_models.xml  config.xml  settings.xml
02-03-voxel-reconstruction-and-labeling/data/4persons/cam2/: boardcorners.xml  color_models.xml  config.xml
02-03-voxel-reconstruction-and-labeling/data/4persons/cam3/: boardcorners.xml  color_models.xml  config.xml  settings.xml
02-03-voxel-reconstruction-and-labeling/data/4persons/cam4/: boardcorners.xml  color_models.xml  config.xml  settings.xml
02-03-voxel-reconstruction-and-labeling/data/horse/cam1/: config.xml
02-03-voxel-reconstruction-and-labeling/data/horse/cam2/: config.xml
02-03-voxel-reconstruction-and-labeling/data/horse/cam4/: config.xml
02-03-voxel-reconstruction-and-labeling/include/: color_model.h  cvpch.h  scene_camera.h  scene_renderer.h  voxel_buffer.h  voxel_camera.h  voxel_reconstruction.h  window.h
02-03-voxel-reconstruction-and-labeling/shaders/: tracking.vert
02-03-voxel-reconstruction-and-labeling/src/: color_model.cpp  cvpch.cpp  scene_camera.cpp  scene_renderer.cpp  voxel_camera.cpp  voxel_reconstruction.cpp  window.cpp
02-voxel-reconstruction/: CMakeLists.txt  main.cpp
02-voxel-reconstruction/data/: checkerboard.xml
02-voxel-reconstruction/data/cam1/: boardcorners.xml  config.xml  intrinsics.xml
02-voxel-reconstruction/data/cam2/: boardcorners.xml  config.xml  intrinsics.xml
02-voxel-reconstruction/data/cam3/: boardcorners.xml  config.xml  intrinsics.xml
02-voxel-reconstruction/data/cam4/: boardcorners.xml  config.xml  intrinsics.xml
02-voxel-reconstruction/data/shaders/: voxel.vert
02-voxel-reconstruction/include/: camera.h  cube.h  cvpch.h  reconstructor.h  scene_camera.h  scene_renderer.h  util.h  voxel.h  voxel_buffer.h  voxel_camera.h  voxel_reconstruction.h  window.h
02-voxel-reconstruction/include/glad/: glad.h
02-voxel-reconstruction/shaders/: basic.vert  voxel.frag  voxel.vert
02-voxel-reconstruction/src/: camera.cpp  cube.cpp  glad.c  glut.cpp  reconstructor.cpp  scene_camera.cpp  scene_renderer.cpp  util.cpp  voxel.cpp  voxel_buffer.cpp  voxel_camera.cpp  voxel_reconstruction.cpp  window.cpp
cmake/: ignore_precompiled_header_msvc.cmake  set_target_precompiled_header_msvc.cmake
settings/: calibration.xml  camera_calib_data.xml  config.xml
util/: logger.cpp  logger.h  shader.cpp  shader.h  util.h  vertex_buffer.cpp  vertex_buffer.h
